travis install command added

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ sudo: false
 language: java
 jdk:
   - oraclejdk7
-script: mvn clean verify -B -Dgpg.skip=true
+install: mvn install -DskipTests=true -Dgpg.skip=true
+script: mvn clean test -B -Dgpg.skip=true
