codecov support added

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,3 +17,4 @@ deploy_job:
     - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
     - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
     - mvn clean deploy --settings .ci/settings.xml -B -U
+    - bash <(curl -s https://codecov.io/bash)
