--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,10 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v2.1.0
       with:
-        java-version: 1.8
+        distribution: 'zulu'
+        java-version: '8'
+        java-package: jdk
+        architecture: x64
 
     - name: Build with Maven
       run: mvn clean install verify -B -Dgpg.skip=true
